--- a/style/style.css
+++ b/style/style.css
@@ -1,65 +1,32 @@
 body {
-        padding: 1rem;
-        margin: 5px;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
-#izmir_adsb {
-        width:50%;
-        height:30em;
-        float:left;
-        border-radius: 10px;
+h3 {
+  margin-top: 2rem;
 }
 
-#tab{
-        width:48%;
-        cursor:pointer;
-        border:0.5px solid black;
-        border-collapse:collapse;
-        border-radius: 10px;
-        overflow-y: auto;
-        float:right;
+.row {
+  margin-bottom: 1rem;
+}
+.row .row {
+  margin-top: 1rem;
+  margin-bottom: 0;
+  padding-left: 1rem;
+}
+[class*="col-"] {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: rgba(0,0,255,.15);
+  border: 1px solid rgba(0,0,255,.2);
 }
 
-table {
-        width:50%;
-        border-collapse: collapse;
+hr {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
-td, th {
-        max-width: 150px;
-        max-height: 100px;
-        border: 1px solid #ccc;
-        text-align: center;
+.table {
+ font-size: small;
 }
-
-#go_button{
-		color:#08233e;
-		font:2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
-		font-size:90%;
-		padding:14px;
-		background-color:rgba(135,206,250,1);
-		border:1px solid #000080;
-		border-radius:10px;
-		border-bottom:1px solid #9f9f9f;
-		box-shadow:inset 0 1px 0 rgba(255,255,255,0.5);
-		cursor:pointer;
-		display:block;
-		width:24%;
-        float:right;
-        margin-bottom: 0.5cm;
-}
-
-#header{
-        text-align:center;
-        font-family: "Times New Roman", Times, serif;
-}
-
-#aircraftimage{
-        float: right;
-        text-align:center;
-        width: %24;
-        height: %25;
-        display: block;
-        margin: 0cm 0.5cm;
-}
-
